# HeatFlow

./: .gitignore  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  CVdata.txt  InputsHelp.txt  JuliaMakeGrid.ipynb  JuliaReadResults.ipynb  Kappadata.txt  LICENSE  MakeGridData.ipynb  MakeGridDataOld.ipynb  Makefile  MatTable4.in  Plotting(Silicon).ipynb  Plotting(Su-8).ipynb  Plotting.ipynb  README.md  Temperature.txt  Test.txt  build.sh  fort.16777206  fpm.toml  geomheat.in  graph.ipynb  matrix.txt  output_matrix.txt  plot.gnu  ploting.ipynb  system.in  tempdepdata.ipynb
Tests/SteadyStateK'/K' and Q/: heat.in  mat.in  param.in
Tests/inputs/: mat_steady.in  param_steady.in
Tests/outputs/: Temperature_Steady.txt
Tests_old/SteadyStateK'/K' and Q/: ReadME  geom.in
cmake/: CodeCoverage.cmake
docs/: CHANGELOG
inputs/: geom.in  heat.in  mat.in  param.in
inputs/Systems/Cup/: geom.in  heat.in  mat.in
outputs/: .nfs0000000000c9effc0000d53e  .nfs0000000000c9f19f0000d53d  .nfs0000000000c9f76e0001aca3  .nfs0000000000c9f7b80001aca6  .nfs0000000000d11cbd0000bbea  DTemperature.txt  Temperature.txt
src/: #setup.f90#  .#setup.f90  Delta_T.f90  Globe_data.f90  ReadTxt.f90  SPtype.f90  Sparse.f90  boundary copy.f90  boundary.f90  cattaneo.f90  constants.f90  constructions.f90  delta_ave.f90  evolve.f90  gmatrix.f90  heatflow.f90  heating.f90  hmatrix.f90  init_evolve.f90  inputs copy.f90  inputs.f90  main.f90  mainFrank.f90  mainSteve.f90  material.f90  matinv.f90  matrix4.f90  output.f90  parameters.f90  set_grid.f90  setup.f90  tempdep.f90
src/heatflow/: mod_boundary.f90  mod_cattaneo.f90  mod_constructions.f90  mod_evolve.f90  mod_global.f90  mod_heating.f90  mod_hmatrix.f90  mod_inputs.f90  mod_material.f90  mod_output.f90  mod_setup.f90  mod_tempdep.f90
steve/heatflow-mk2-HarryMclean/: .gitignore  MakeGridData.ipynb  Makefile
steve/heatflow-mk2-HarryMclean/src/: Delta_T.f90  delta_ave.f90  material.f90  setup.f90
steve/heatflow-mk2-Merged/: README.md  Temperature.txt
steve/heatflow-mk2-Merged/src/: Globe_data.f90  ReadTxt.f90  constructions.f90  delta_ave.f90  inputs.f90  main.f90  matinv.f90  matrix4.f90  output.f90  setup.f90
steve/heatflow-mk2-steve/src/: evolve.f90  init_evolve.f90  matrix4.f90  mymkl.f90  output.f90  set_gridold.f90  setup.f90
test/: CMakeLists.txt  test_helloworld.f90  test_mod_boundary.f90  test_mod_cattaneo.f90  test_mod_evolve.f90  test_mod_heating.f90  test_mod_hmatrix.f90  test_mod_inputs.f90  test_mod_material.f90  test_mod_output.f90  test_mod_setup.f90
test/data/: mat_error.in  param_error.in  system_error.in  tempdep.in
util/: MakeGridData.ipynb  Makefile  Plotting(Silicon).ipynb  Plotting(Su-8).ipynb  Plotting.ipynb
util/DFortran/make_geom/: makefile  system.in
util/DFortran/make_geom/src/: mkgeom.f90  read.f90  shape_checking.f90  shapes.f90
util/DFortran/make_geom/test/: Pillers.in  geom.in
util/DPython/: gui2_analyze_simulation.py  gui_analyze_simulation.py  visualize3d.py
util/DPython/scripts/: Pillers.in  view-grid.py  view-heat.py  view-shapes.py
util/DShell/: omp_exec.sh
utl/: Pillers.in  Untitled.ipynb  Untitled1.ipynb  geom-grid3d.py  geom.in  geom.ipynb  geom3d.in  geom3d_old.in  mat.in  visualize3d.py
utl/DFortran/make_geom/src/: read.f90
utl/DPython/scripts/: geom.in  view-grid.py
